# FastAPI-DIO_blog

./: README.md  api-tests.http  blog.db  pyproject.toml
app/: database.py  main.py
controllers/: auth.py  post.py
core/: security.py
docs/: 00-Cartilha-DIO_blog-instalacao_e_confi.ipynb  01-Cartilha-DIO_blog-criando_aplicacao.ipynb  02-Cartilha-DIO_blog-boas_praticas.ipynb  03-Cartilha-DIO_blog-rotas_e_endpoints.ipynb  04-Cartilha-DIO_blog-querry_parameters.ipynb  05-Cartilha-DIO_blog-request_body.ipynb  06-Cartilha-DIO_blog-cookies_e_headers.ipynb  07-Cartilha-DIO_blog-dados_via_JSON.ipynb  08-Cartilha-DIO_blog-APIRouter.ipynb  Cartilha-DIO_blog-instalacao_e_confi.ipynb  Cartilha-DIO_blog.ipynb
docs/02-cartilhas-Banco_de_Dados_Relacionais/: 00-Cartilha-DB-conceitos.ipynb  02-Cartilha-DB-SQL.ipynb
docs/03-manipulacao_de_dados_com_FastAPI_assincrono/: 00-Cartilha-FastAPI-instalacao_dependencias.ipynb  01-Cartilha-FastAPI-modelos_de_dados.ipynb  02-Cartilha-FastAPI-operacoes_CRUD.ipynb
docs/04-cartilhas-Autenticacao_e_Autorizacao_em_FastAPI/: 00-Cartilha-Autenticacao-uso_de_tokens.ipynb  01-Cartilha-Testes_Unitarios_com_Pytest.ipynb  02-Cartilha-Escrevendo_testes_para_suas_APIs_assincronas.ipynb
models/: post.py
schemas/: post.py
services/: post.py
src/app/: database.py  main.py
src/controllers/: auth.py  post.py
src/models/: post.py
src/services/: post.py
src/views/: post.py
tests/: conftest.py
tests/integration/controllers/auth/: test_login.py
tests/integration/controllers/post/: test_create_post.py  test_delete_post.py  (+3 more)
views/: post.py
