[project]
name = "fastapi-dio-blog"
version = "0.1.0"
description = "Projeto de um blog para estudo com FastAPI e Python. Interação WEB com programa utilizando HTTP."
authors = [
    {name = "Felipe-Magalhaes-A-Carneiro",email = "felipe.araujo.arq@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
